# paudle

./: Cargo.toml  README.md  index-e760d1029a742579.js  index-e760d1029a742579_bg.wasm  index.html  package.json
docs/: index-82b2658ccae78543.js  index-82b2658ccae78543_bg.wasm  index-b7f5fffb424d77dc.js  index-b7f5fffb424d77dc_bg.wasm  index-c77f7a0f7967045a.js  index-c77f7a0f7967045a_bg.wasm  index-c7ea6be60e00ac52.js  index-c7ea6be60e00ac52_bg.wasm  index-d6bb25c25ed20e30.js  index-d6bb25c25ed20e30_bg.wasm  index.html  patternfly-addons.css  patternfly-d4ebb58f922fc0ce.css
docs/snippets/patternfly-yew-ef421e3a58830819/: inline0.js
docs/snippets/paudle-7b065bd36b458775/: inline0.js
src/: awords.txt  main.rs  save.rs  scoreboard.rs
src/board/: board.rs  cell.rs  mod.rs  row.rs
src/keyboard/: key.rs  keyboard.rs  keyboard_status.rs  mod.rs
