[package]
name = "paudle"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.19", default-features = false, features = ["wasmbind", "js-sys"] }
getrandom = { version = "0.2", features = ["js"] }
gloo-events = "0.1"
gloo-storage = "0.2"
js-sys = "0.3.56"
patternfly-yew = "0.1.1"
rand = "0.8"
serde = "1.0"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.29"
web-sys = { version = "0.3", features = ["Clipboard", "Navigator"] }
yew = "0.19"

[patch.crates-io]
patternfly-yew = { git = "https://github.com/pmsanford/patternfly-yew" }
